Auto loading and rendering all components on the frames directory

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A Web OS</title>
   </head>
-  <body class="h-100vh w-100vw bg-gray-800">
+  <body class="h-100vh w-100vw bg-[rgb(46_72_78)]">
     <div id="root" class="size-full"></div>
     <script type="module" src="./main.ts"></script>
   </body>
