--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A Web OS</title>
+    <title>Ezequiel A. Schwartzman</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
   <body class="h-100vh w-100vw bg-[rgb(46_72_78)] font-sans">
     <div id="root" class="size-full"></div>
